@@ -1,5 +1,10 @@
 2009-07-17  Corinna Vinschen  <corinna@vinschen.de>
 
+	* syscalls.cc (unlink_nt): Just return when a sharing violation
+	occurs on remote filesystems.
+
+2009-07-17  Corinna Vinschen  <corinna@vinschen.de>
+
 	* globals.cc: Improve comment on R/O UNICODE_STRINGs.
 	* mount.h (class fs_info): Add is_mvfs bit.
 	* mount.cc (fs_info::update): Recognize MVFS remote filesystem.
